Fix spacing on Intro modal

--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -98,7 +98,7 @@
   }
 }
 
-.IntroWarning {
+p.IntroWarning {
     @extend p.Error;
     width: 320px;
     margin: 1.5em;
